# mfs

./: Cargo.toml
assets/: custom_assets.asset.json  custom_assets.asset.ron  levels.ldtk
assets/level_assets/: wip_walls.ase
assets/textures/: SlimeGreenDie.xcf  arrow_single_right.xcf  heart.ase  player.xcf  quiver.ase  refresh_icon.ase  skill_card.ase  skill_icons.ase  slime.xcf  xp_gem.ase
src/: camera.rs  collisions.rs  cursor.rs  drops.rs  enemy.rs  input.rs  level.rs  loading.rs  main.rs  player.rs  player_levelup.rs  player_skills.rs  projectile.rs  ui.rs  walls.rs
src/core/: body.rs  components.rs  directional_animation.rs  mod.rs  ui_components.rs
src/core/snapshots/: mfs__core__directional_animation__serilising.snap
src/uis/: fade_in_overlay.rs  in_game_hud.rs  level_up_cards.rs  main_menu.rs  mod.rs
