[package]
name = "mfs"
version = "0.1.0"
edition = "2024"
exclude = ["build", "assets"]

[dependencies]
bevy = { version = "0.17.2", features = [ "bevy_remote", "reflect_auto_register"] }
#bevy_asset_loader = {version =  "0.23.0", features = ["2d"]}
bevy_asset_loader = {git = "https://github.com/NiklasEi/bevy_asset_loader.git",  branch = "bevy_main", features = ["2d"]}
#bevy_ecs_ldtk = "0.12.0"
bevy_ecs_ldtk = { git = "https://github.com/Trouv/bevy_ecs_ldtk.git", branch = "lenchog/0.17-collab" }
bevy_ecs_tilemap = "0.17.0"
bevy_kira_audio = "0.24.0"
leafwing-input-manager = "0.18.0"
avian2d = { version = "0.4.0", features = [ "debug-plugin" ]}
rand = "0.9.2"
anyhow = "1.0.100"
serde = "1.0.228"
bevy_common_assets = { version = "0.14.0", features = ["ron", "json"] }
insta = "1.43.2"
serde_json = "1.0.145"

