[package]
name = "mfs"
version = "0.1.0"
edition = "2024"
exclude = ["build", "assets"]

[features]
debug_ui_colors = []
debug_physics_render = []



[dependencies]
bevy = { version = "0.18.0", features = [ "reflect_auto_register", "ghost_nodes"] }
bevy_asset_loader = {version =  "0.25.0", features = ["2d"]}
bevy_ecs_ldtk = "0.14.0"
bevy_ecs_tilemap = "0.18.1"
leafwing-input-manager = "0.20.0"
avian2d = { version = "0.5.0", features = [ "debug-plugin" ]}
rand = "0.10.0"
anyhow = "1.0.101"
serde = "1.0.228"
bevy_common_assets = { version = "0.15.0", features = ["ron", "json"] }
insta = "1.46.3"
serde_json = "1.0.149"
bevy_egui = "0.39.1"
bevy_prng = { version = "0.14", features = ["chacha20", "wyrand"] }
bevy-inspector-egui = "0.36.0"
bevy_hanabi = "0.18.0"

## WASM Specific Deps  
[target.'cfg(target_family = "wasm")'.dependencies]
bevy_rand = {version = "0.14.0", features = ["wasm_js"] }

## Deps for not-WASM
[target.'cfg(not(target_family = "wasm"))'.dependencies]  
bevy = { version = "0.18.0", features = [ "bevy_remote"] }
bevy_rand = "0.14.0"

